# mlops

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
ade/: __init__.py  config.py  llm.py  requirements.txt
ade/agent/: actions.py  memory.py  orchestrator.py  planner.py
ade/cost/: optimizer.py
ade/discovery/: profiler.py  scanner.py
ade/docsgen/: generator.py
ade/drift/: data_drift.py  schema_drift.py
ade/etl/: pipeline_builder.py  quality.py
ade/lambdas/: handlers.py
ade/ml/: registry.py  retraining.py
ade/monitoring/: alerting.py  metrics.py
ade/recovery/: self_healing.py
docs/: docker_guide.md  git_notes.md
docs/ade/: architecture.md  cost-analysis.md  runbook.md  security-model.md
experiments/experiment1/: README.md
src/: app.py
terraform/: .terraform.lock.hcl  budgets.tf  events.tf  iam.tf  lambda.tf  monitoring.tf  outputs.tf  stepfunctions.tf  storage.tf  variables.tf  versions.tf
tests/: test_data_drift.py  test_ml_and_cost.py  test_pipeline_builder.py  test_planner_and_orchestrator.py  test_quality.py  test_recovery_profiler_docs.py  test_schema_drift.py
