[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ade"
version = "0.1.0"
description = "Autonomous AI Data Engineer - event-driven agent for AWS data platforms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic[bedrock]>=0.92.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["ade*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["ade", "tests"]
extend-exclude = ["src", "notebooks", "experiments"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM"]  # tests favour explicitness over simplification hints
